changes to index.html on day 6

--- a/Day 06/index.html
+++ b/Day 06/index.html
@@ -1,48 +1,55 @@
-<head>
-  <link href="css/style.css" rel="stylesheet">
-</head>
-<body>
+<!DOCTYPE html>
+<html>
 
-  <h1 style="color: gold;">Spark Your Brain</h1>
+  <head>
+    <link href="css/style.css" rel="stylesheet">
+  </head>
 
-  <table>
-    <thead>
-      <tr>
-        <th></th>
-        <th scope="col">Group</td>
-        <th scope="col">Name</td>
-        <th scope="col">Last Name</td>
-        <th scope="col">Height</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">Center Midfielder</th>
-        <td rowspan="2">Midfield</td>
-        <td>Mike</td>
-        <td>Wazowski</td>
-        <td>4'0"</td>
-      </tr>
-      <tr>
-        <th scope="row">Attacking Midfielder</th>
-        <td>Hermione</td>
-        <td>Granger</td>
-        <td>5'5"</td>
-      </tr>
-      <tr>
-        <th scope="row">Center Back</th>
-        <td>Defense</td>
-        <td colspan="3">Scouting</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td></td>
-        <td>2</td>
-        <td>2</td>
-        <td>2</td>
-        <td>4'8.5"</td>
-      </tr>
-    </tfoot>
-  </table>  
-</body>
+  <body>
+  
+    <h1 style="color: gold;">Spark Your Brain</h1>
+  
+    <!-- Table containing most possible table features (e.g. colspan, table headings, etc.): -->
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th scope="col">Group</td>
+          <th scope="col">Name</td>
+          <th scope="col">Last Name</td>
+          <th scope="col">Height</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Center Midfielder</th>
+          <td rowspan="2">Midfield</td>
+          <td>Mike</td>
+          <td>Wazowski</td>
+          <td>4'0"</td>
+        </tr>
+        <tr>
+          <th scope="row">Attacking Midfielder</th>
+          <td>Hermione</td>
+          <td>Granger</td>
+          <td>5'5"</td>
+        </tr>
+        <tr>
+          <th scope="row">Center Back</th>
+          <td>Defense</td>
+          <td colspan="3">Scouting</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td></td>
+          <td>2</td>
+          <td>2</td>
+          <td>2</td>
+          <td>4'8.5"</td>
+        </tr>
+      </tfoot>
+    </table>  
+  </body>
+  
+</html>
