--- a/Day 09/index.html
+++ b/Day 09/index.html
@@ -6,21 +6,21 @@
   </head>
   <body>
     <!-- Navigation: -->
-    <div>
+    <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="post.html">Featured Post</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    </div>
+    </nav>
     <!-- Header: -->
-    <div>
+    <header>
       <h1>Spark Your Brain</h1>
       <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Tony A.</span></p>
-    </div>
+    </header>
     <!-- Content: -->
-    <div id="post">
+    <main id="post">
       <a href="post.html"> <!-- This anchor wraps the post subheadings and links to the Featured Post page -->
         <h2>
           3 Keys to Accelerated Learning
@@ -29,6 +29,15 @@
           Three techniques you can use to learn faster and more effectively.
         </h3>
       </a>
-    </div>
+    </main>
+    <hr>
+    <footer>
+      <ul>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">GitHub</a></li>
+      </ul>
+      <p>Copyright &copy; Tony Alamo's Website 2024</p>
+    </footer>
   </body>  
 </html>
