formatting changes and class removal

--- a/Day 07/contact.html
+++ b/Day 07/contact.html
@@ -97,7 +97,7 @@
           <label for="comments">Please share with us any additional comments you may have:</label>
           <textarea id="comments" name="comments" rows="5" cols="80">This would be default text.</textarea>
         </section>
-        <setion class="submit">
+        <setion>
           <input type="submit" value="Send">
         </setion>
       </form>
