--- a/Day 07/index.html
+++ b/Day 07/index.html
@@ -22,12 +22,8 @@
     <!-- Content: -->
     <div id="post">
       <a href="post.html"> <!-- This anchor wraps the post subheadings and links to the Featured Post page -->
-        <h2>
-          3 Keys to Accelerated Learning
-        </h2>
-        <h3>
-          Three techniques you can use to learn faster and more effectively.
-        </h3>
+        <h2>3 Keys to Accelerated Learning</h2>
+        <h3>Three techniques you can use to learn faster and more effectively.</h3>
       </a>
     </div>
   </body>
