--- a/Day 04/index.html
+++ b/Day 04/index.html
@@ -17,7 +17,7 @@
     <!-- Header: -->
     <div>
       <h1>Spark Your Brain</h1>
-      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Tony A.</span></p>
+      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Your Name.</span></p>
     </div>
     <!-- Content: -->
     <div id="post">
