--- a/Day 04/post.html
+++ b/Day 04/post.html
@@ -18,7 +18,7 @@
     <div>
       <h1>3 Keys to Accelerated Learning</h1>
       <h2>Three techniques you can use to learn faster and more effectively</h2>
-      <span>Posted by <a href="about.html">Tony Alamo</a> on August 24, 2024</span>
+      <span>Posted by <a href="about.html">Your Name</a> on August 24, 2024</span>
     </div>
     <!-- Content: -->
     <div>
