--- a/Day 09/index.html
+++ b/Day 09/index.html
@@ -17,7 +17,7 @@
     <!-- Header: -->
     <header>
       <h1>Spark Your Brain</h1>
-      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Tony A.</span></p>
+      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Your Name.</span></p>
     </header>
     <!-- Content: -->
     <main id="post">
@@ -33,7 +33,7 @@
         <li><a href="#">Facebook</a></li>
         <li><a href="#">GitHub</a></li>
       </ul>
-      <p>Copyright &copy; Tony Alamo's Website 2024</p>
+      <p>Copyright &copy; Your Name's Website 2024</p>
     </footer>
   </body>  
 </html>
