--- a/Day 09/post.html
+++ b/Day 09/post.html
@@ -18,7 +18,7 @@
     <header>
       <h1>3 Keys to Accelerated Learning</h1>
       <h2>Three techniques you can use to learn faster and more effectively</h2>
-      <span>Posted by <a href="about.html">Tony Alamo</a> on August 24, 2024</span>
+      <span>Posted by <a href="about.html">Your Name</a> on August 24, 2024</span>
     </header>
     <!-- Content: -->
     <main>
@@ -81,7 +81,7 @@
         <li><a href="#">Facebook</a></li>
         <li><a href="#">GitHub</a></li>
       </ul>
-      <p>Copyright &copy; Tony Alamo's Website 2024</p>
+      <p>Copyright &copy; Your Name's Website 2024</p>
     </footer>
   </body>  
 </html>
