--- a/Day 11/index.html
+++ b/Day 11/index.html
@@ -21,7 +21,7 @@
     </nav>
     <header id="home-header">
       <h1>Spark Your Brain</h1>
-      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Tony A.</span></p>
+      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Your Name.</span></p>
     </header>
     <main>
       <section>
@@ -29,7 +29,7 @@
           <h2>3 Keys to Accelerated Learning</h2>
           <h3>Three techniques you can use to learn faster and more effectively.</h3>
         </a>
-        <p>Posted by <a href="about.html">Tony Alamo</a> on September 24, 2024</p>
+        <p>Posted by <a href="about.html">Your Name</a> on September 24, 2024</p>
       </section>
       <hr>
       <section>
@@ -63,7 +63,7 @@
         <li><a href="#">Facebook</a></li>
         <li><a href="#">GitHub</a></li>
       </ul>
-      <p>Copyright &copy; Tony Alamo's Website 2024</p>
+      <p>Copyright &copy; Your Name's Website 2024</p>
     </footer>
   </body>
 </html>
