--- a/Day 11/post.html
+++ b/Day 11/post.html
@@ -22,7 +22,7 @@
     <header id="post-header">
       <h1>3 Keys to Accelerated Learning</h1>
       <h2>Three techniques you can use to learn faster and more effectively</h2>
-      <span>Posted by <a href="about.html">Tony Alamo</a> on August 24, 2024</span>
+      <span>Posted by <a href="about.html">Your Name</a> on August 24, 2024</span>
     </header>
     <main>
       <p>One key to accelerated learning is <strong>active recall</strong>. Actively making the effort to produce the information drastically increases retention.</p>
@@ -51,15 +51,15 @@
           <tr>
             <th scope="row">Center Midfielder</th>
             <td rowspan="2">Midfield</td>
-            <td>Tony</td>
-            <td>Alamo</td>
-            <td>6'0"</td>
+            <td>Mike</td>
+            <td>Wazowski</td>
+            <td>4'0"</td>
           </tr>
           <tr>
             <th scope="row">Attacking Midfielder</th>
-            <td>Jane</td>
-            <td>Doe</td>
-            <td>6'1"</td>
+            <td>Hermione</td>
+            <td>Granger</td>
+            <td>5'5"</td>
           </tr>
           <tr>
             <th scope="row">Center Back</th>
@@ -73,7 +73,7 @@
             <td>2</td>
             <td>2</td>
             <td>2</td>
-            <td>6'0.5"</td>
+            <td>4'8.5"</td>
           </tr>
         </tfoot>
       </table>
@@ -85,7 +85,7 @@
         <li><a href="#">Facebook</a></li>
         <li><a href="#">GitHub</a></li>
       </ul>
-      <p>Copyright &copy; Tony Alamo's Website 2024</p>
+      <p>Copyright &copy; Your Name's Website 2024</p>
     </footer>
   </body>
 </html>
