--- a/Day 03/index.html
+++ b/Day 03/index.html
@@ -14,7 +14,7 @@
     </div>
     <div>
       <h1>Spark Your Brain</h1>
-      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Tony A.</span></p>
+      <p>Welcome to my blog, where you'll learn about accelerated learning. <span>By Your Name.</span></p>
     </div>
     <div id="post">
       <h2>3 Keys to Accelerated Learning</h2>
