--- a/Day 11/about.html
+++ b/Day 11/about.html
@@ -35,7 +35,7 @@
         <li><a href="#">Facebook</a></li>
         <li><a href="#">GitHub</a></li>
       </ul>
-      <p>Copyright &copy; Tony Alamo's Website 2024</p>
+      <p>Copyright &copy; Your Name's Website 2024</p>
     </footer>
   </body>
 </html>
