--- a/Day 11/contact.html
+++ b/Day 11/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>My Blog | Contact</title>
-    <link rel="icon" type="image/x-icon" href="..img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
     <link href="css/style.css" rel="stylesheet">
 
